{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 283,
  "lineage": "db158593-1a86-98fe-31bb-1883e2786cb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Prvc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-5b673c34",
            "arn": "arn:aws:ec2:ap-south-1:399452596959:instance/i-095fc06737f0f1928",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095fc06737f0f1928",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e695db9e70983dc",
            "private_dns": "ip-190-160-4-88.ap-south-1.compute.internal",
            "private_ip": "190.160.4.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ff5fc2e7e39d1fc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017c03defdf1148c1",
            "tags": {
              "Name": "PrivateInstance"
            },
            "tags_all": {
              "Name": "PrivateInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05060c3ba0beb9141"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf_demo",
            "aws_security_group.sg",
            "aws_subnet.prvsubnet",
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Pubec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-5b673c34",
            "arn": "arn:aws:ec2:ap-south-1:399452596959:instance/i-0c2e14cc005cf7939",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2e14cc005cf7939",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf_demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd99698f6c01a2df",
            "private_dns": "ip-190-160-1-153.ap-south-1.compute.internal",
            "private_ip": "190.160.1.153",
            "public_ip": "13.233.227.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a871a9b6b9b8cff3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8e9bc80a7693ef1",
            "tags": {
              "Name": "PublicInstance"
            },
            "tags_all": {
              "Name": "PublicInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05060c3ba0beb9141"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf_demo",
            "aws_security_group.sg",
            "aws_subnet.pubsubnet",
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:internet-gateway/igw-08c03c99ffd132809",
            "id": "igw-08c03c99ffd132809",
            "owner_id": "399452596959",
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:route-table/rtb-0a09ce42339469164",
            "id": "rtb-0a09ce42339469164",
            "owner_id": "399452596959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c03c99ffd132809",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ddd8fd2efee63a",
            "route_table_id": "rtb-0a09ce42339469164",
            "subnet_id": "subnet-0e8e9bc80a7693ef1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.pubsubnet",
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:security-group/sg-05060c3ba0beb9141",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05060c3ba0beb9141",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PING",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_traffic",
            "name_prefix": "",
            "owner_id": "399452596959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg"
            },
            "tags_all": {
              "Name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f78c26878548402"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:subnet/subnet-017c03defdf1148c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "190.160.4.0/24",
            "id": "subnet-017c03defdf1148c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399452596959",
            "tags": {
              "Name": "subnet-0"
            },
            "tags_all": {
              "Name": "subnet-0"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:subnet/subnet-02714cbce81857133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "190.160.5.0/24",
            "id": "subnet-02714cbce81857133",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399452596959",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:subnet/subnet-0007bfa13a244a310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "190.160.6.0/24",
            "id": "subnet-0007bfa13a244a310",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "399452596959",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:subnet/subnet-0e8e9bc80a7693ef1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "190.160.1.0/24",
            "id": "subnet-0e8e9bc80a7693ef1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399452596959",
            "tags": {
              "Name": "subnet-0"
            },
            "tags_all": {
              "Name": "subnet-0"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:subnet/subnet-057eca1adf50c3fca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "190.160.2.0/24",
            "id": "subnet-057eca1adf50c3fca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399452596959",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:subnet/subnet-03cb7a608c204710c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "190.160.3.0/24",
            "id": "subnet-03cb7a608c204710c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399452596959",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-04f78c26878548402"
          },
          "dependencies": [
            "aws_vpc.terraform",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:399452596959:vpc/vpc-04f78c26878548402",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.160.0.0/16",
            "default_network_acl_id": "acl-029572fa76f084a57",
            "default_route_table_id": "rtb-0c3d6a8fdaa5b4f4f",
            "default_security_group_id": "sg-04a3fc8c868a03c06",
            "dhcp_options_id": "dopt-0bf54560",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04f78c26878548402",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c3d6a8fdaa5b4f4f",
            "owner_id": "399452596959",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}